# gameplug

./: .clang-format  .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GAMES_COMPATIBILITY_LIST.md  GamePlug.conf  README.md  plan.md
.github/workflows/: release.yml  test.yml
docs/: PLUGIN_DEVELOPMENT.md  PLUGIN_USAGE.md
examples/: CMakeLists.txt  minimal_plugin.cpp  vk_graphic_api_plugin.cpp
examples/extra/: extra_plugin.cpp
examples/sample/: sample_plugin.cpp
include/: plugin_d3d11.h  plugin_helper.h  plugin_interface.h  plugin_vulkan.h  upscaler_interface.h
src/: CMakeLists.txt  gameplug.conf
src/d3d10/: CMakeLists.txt  dinput.cpp  framework.cpp  hooks.cpp  hooks_common.h  hooks_d3d10.cpp  hooks_dxgi.cpp  overlay.cpp  version.cpp  winmm.cpp
src/d3d11/: CMakeLists.txt  dinput.cpp  dinput_skyrim_ae.def  downsample.h  downsample.hlsl  fallout4_bridge_api.h  framework.cpp  hooks.cpp  hooks_common.h  hooks_d3d11.cpp  hooks_dxgi.cpp  overlay.cpp  skyrim_bridge_api.h  ui_blend.hlsl  ui_blend_ps.h  ui_blend_vs.h  upscaler_manager.cpp  upscaler_manager.h  version.cpp  version_fallout4.def  winmm.cpp
src/d3d12/: CMakeLists.txt  dinput.cpp  framework.cpp  hooks.cpp  hooks_common.h  hooks_d3d11.cpp  hooks_d3d12.cpp  hooks_dxgi.cpp  overlay.cpp  upscaler_manager.cpp  upscaler_manager.h  version.cpp  winmm.cpp
src/d3d9/: CMakeLists.txt  d3d9.cpp  d3d9.def  d3d9_proxy.cpp  d3d9_proxy.h  d3d9_proxy_d3d9.cpp  d3d9_proxy_d3d9.h  d3d9_proxy_device.cpp  d3d9_proxy_device.h  d3d9_proxy_surface.cpp  d3d9_proxy_surface.h  d3d9_proxy_swapchain.cpp  d3d9_proxy_swapchain.h  d3d9_proxy_texture.cpp  d3d9_proxy_texture.h  dx_overlay.cpp  dx_overlay.h  framework.cpp  skyrim.def  texture_replacer.cpp  texture_replacer.h  upscaler_manager.cpp  upscaler_manager.h  version.cpp  version.def  winmm.cpp
src/shared/: common.h  config.cpp  config.h  dinput8.cpp  framework_export.h  gameplug_imgui_config.h  imgui_overlay_shared.cpp  imgui_overlay_shared.h  logger.cpp  logger.h  plugin_manager.cpp  plugin_manager.h  version.cpp  win32_hooks.cpp  win32_hooks.h  winmm.cpp
src/shared/shaders/: motion_vector.comp
src/vk/: CMakeLists.txt  VK_LAYER_GAMEPLUG.json  dinput8.cpp  dispatch.cpp  dispatch.h  downsample.comp  downsample.spv  downsample_comp.h  framework.cpp  image_tracker.cpp  image_tracker.h  jitter_helper.cpp  jitter_helper.h  main.cpp  overlay.cpp  overlay.h  run_game.bat  types.h  upscaler_manager.cpp  upscaler_manager.h  version.cpp  vk_layer_commands.cpp  vk_layer_exports.cpp  vk_layer_exports.h  vk_layer_lifecycle.cpp  vk_layer_resources.cpp  vklayer.def  winmm.cpp
